--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /LocalStuff
+/src/LocalStuff
 /src/OLD
 /src/CodeQAP
 /*.o
@@ -9,26 +10,13 @@
 /src/all-interval
 /src/alpha
 /src/costas
-/src/queens
-/src/perfect-square
 /src/langford
 /src/magic-square
 /src/partit
-/src/C17-a
-/src/C17-b
-/src/C18-a
-/src/C18-b
-/src/C19
-/src/C20
+/src/perfect-square
+/src/qap
+/src/queens
 /src/COSTAS
 /src/ALL-INTERVAL.TXT
 /src/CELL.TXT
 /src/COSTAS-CELL
-/src/qap
-/src/tools.c1
-/src/z16
-/src/z17
-/src/z18
-/src/z19
-/src/z20
-/src/random.c
